Add pagination for GET with limit and page queryparams and exception handling